--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -26,9 +26,14 @@ dependencies {
     compile "com.android.support:support-v4:$androidSupportVersion"
     compile "com.android.support:support-v13:$androidSupportVersion"
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
+    compile "com.android.support:design:$androidSupportVersion"
     compile "com.android.support:palette-v7:$androidSupportVersion"
     compile "com.android.support:recyclerview-v7:$androidSupportVersion"
     compile "com.android.support:cardview-v7:$androidSupportVersion"
+
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile files('libs/volley.jar')
 }
